scrollbar fix for login, register, and terms

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3778,7 +3778,6 @@ video {
 /* WRAPPERS */
 #wrapper {
   width: 100%;
-  overflow-x: hidden;
 }
 .wrapper {
   padding: 0 20px;
